@startuml ER Diagram

hide circle

entity "Person" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * name : VARCHAR(255) NOT NULL
  * email : VARCHAR(255) NOT NULL
  * dob : DATE NOT NULL
}

entity "PersonAddress" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * person_id : INTEGER NOT NULL <<FK>>
  * address_id : INTEGER NOT NULL <<FK>>
}

entity "Address" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * type : VARCHAR(255) NOT NULL
  * street : VARCHAR(255) NOT NULL
  * city : VARCHAR(255) NOT NULL
  * country : VARCHAR(255) NOT NULL
  * zipcode : VARCHAR(255) NOT NULL
}

entity "PersonNeighbour" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * person_id : INTEGER NOT NULL <<FK>>
  * neighbour_id : INTEGER NOT NULL <<FK>>
}

entity "Neighbour" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * name : VARCHAR(255) NOT NULL
  * email : VARCHAR(255) NOT NULL
}

entity "Favourite" {
  * id : INTEGER NOT NULL <<PK>>
  --
  * type : VARCHAR(255) NOT NULL
  * value : VARCHAR(255) NOT NULL
  * person_id : INTEGER NOT NULL <<FK>>
}

Person }o--o{ PersonAddress
PersonAddress }o--o{ Address

Person }o--o{ PersonNeighbour
PersonNeighbour }o--o{ Neighbour

Person ||--o{ Favourite
@enduml